yaml/deploy/demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: demo-app
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port:  "8080"
    spec:
      containers:
        - name: demo-app
          image: ghcr.io/USERNAME/tanzu-devslam-spring/demo:TAG
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 60
            periodSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            initialDelaySeconds: 10
      imagePullSecrets:
      - name: dockerconfigjson-github-com    

---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: default
  labels:
    app: demo-app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: demo-app
  type: ClusterIP
